--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ authors = ["Eivind E. Dahl <eivind.dahl@gmail.com>"]
 [dependencies]
 csv = "*"
 regex = "*"
-elma = { git = "https://github.com/hexjelly/elma-rust", branch = "state" }
+elma = { git = "https://github.com/hexjelly/elma-rust", branch = "master" }
 web-view = { git = "https://github.com/Boscop/web-view", branch = "master" }
