--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ csv = "*"
 regex = "*"
 elma = "*"
 web-view = "*"
-notify = "*"
+#notify = "*"
 
 [target.'cfg(windows)'.build-dependencies]
 winres = { git = "https://github.com/mxre/winres" }
