--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ regex = "*"
 elma = "*"
 web-view = "*"
 notify = "*"
+serde = "*"
+serde_derive = "*"
 
 [target.'cfg(windows)'.build-dependencies]
 winres = { git = "https://github.com/mxre/winres" }
