--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ reqwest = "*"
 serde_derive = "*"
 serde_json = "*"
 serde = "*"
-maud = "*"
+maud = { git = "https://github.com/lfairy/maud" }
 
 [target.'cfg(windows)'.build-dependencies]
 winres = { git = "https://github.com/mxre/winres" }
